# GNN

./: .gitignore  README.md  gnn_multirobot_sim.ipynb  gnn_multirobot_sim.py  状态空间模型.md
cotek_ws/launch/: GNN.launch
cotek_ws/src/: CMakeLists.txt  README.md
cotek_ws/src/gnn_control/: CMakeLists.txt  package.xml
cotek_ws/src/gnn_control/data/: data1.csv  data2.csv  data3.csv
cotek_ws/src/gnn_control/include/gnn_control/: gnn_controller.h
cotek_ws/src/gnn_control/launch/: gnn_control.launch
cotek_ws/src/gnn_control/src/: data_logger_node.cpp  gnn_controller.cpp
cotek_ws/src/tracer_ros/tracer_base/: CMakeLists.txt  package.xml
cotek_ws/src/tracer_ros/tracer_base/launch/: tracer_base.launch
cotek_ws/src/tracer_ros/tracer_base/src/: cotek_can_bridge.cpp  tracer_base_node.cpp  tracer_messenger.cpp
cotek_ws/src/tracer_ros/tracer_bringup/launch/: tracer_bridge.launch  tracer_teleop_keyboard.launch
cotek_ws/src/tracer_ros/tracer_bringup/scripts/: gnn_ros_master.py
cotek_ws/src/ugv_sdk/: CMakeLists.txt
cotek_ws/src/ugv_sdk/src/utilities/: protocol_detector.cpp
drivers/can/: can.md
drivers/can/ver 2.0.8-1.0.23/acusb linux demo/: ICANCmd.h
drivers/can/ver 2.0.8-1.0.23/acusb linux demo/64bit/: Makefile  readme  testLikeCan  testLikeCan.c
配置指南/: 3.0系统部署.md  3.0系统部署.md.bak  GNN控制操作流程.md  Report.md  setup_tracer.sh  tracer_mini部署文档.md  tracer_mini部署文档.md.bak
