<?xml version="1.0"?>
<package format="2">
  <name>gnn_control</name>
  <version>0.0.1</version>
  <description>The GNN centralized controller package for multi-robot formation.</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>eigen</depend>
  <depend>std_msgs</depend> </package>